# skratch_robot_description

./: .gitignore  README.md
kinova_arm_description/description/: kinova_arm.urdf  kinova_arm.urdf.xacro  kinova_arm_macro.xacro
kinova_arm_description/description/robotiq_gripper/: robotiq_gripper.xacro
kinova_arm_description/launch/: kinova_arm_gazebo.launch.py
kinova_arm_gazebo/: CMakeLists.txt  package.xml
kinova_arm_gazebo/config/: kinova_arm_controller.yaml
kinova_arm_gazebo/gazebo/: kinova_arm_gazebo.xacro  kinova_arm_ros2_control.xacro
kinova_arm_gazebo/launch/: simulation.launch.py
kinova_arm_moveit_config/: .setup_assistant
kinova_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kinova_arm.ros2_control.xacro  kinova_arm.srdf  moveit_controllers.yaml
mimic_joints_gazebo/: CMakeLists.txt  package.xml
mimic_joints_gazebo/include/mimic_joints_gazebo/: disable_link_plugin.hpp  mimic_joint_plugin.hpp
mimic_joints_gazebo/src/: disable_link_plugin.cpp  mimic_joint_plugin.cpp
skratch_description/: CMakeLists.txt
skratch_description/description/: skratch_base_ros2_control.xacro  skratch_robot.urdf.xacro
skratch_description/description/base/: skratch_base_plate.xacro
skratch_description/description/wheels/: kelo_drive.xacro  kelo_drive_top_part.xacro  kelo_drive_wheel.xacro  skratch_wheel.xacro  skratch_wheel_drive.xacro  skratch_wheel_drive_top_part.xacro
skratch_description/launch/: skratch_gazebo.launch.py
skratch_description/meshes/wheels/: kelo_drive_mid_part.dae  kelo_drive_top_part.dae
skratch_gazebo/: CMakeLists.txt  package.xml
skratch_gazebo/config/: skratch_base_controller.yaml  skratch_controller.yaml
skratch_gazebo/gazebo/: skratch_gazebo.xacro  skratch_ros2_control.xacro
skratch_gazebo/launch/: simulation.launch.py
skratch_mapping/: CMakeLists.txt
