<?xml version="1.0"?>
<package format="3">
  <name>mimic_joints_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo wrapper for the Robotiq 85 gripper</description>

  <maintainer email="chaitanyagumudala961@gmail.com">oramos</maintainer>
  <author email="chaitanyagumudala961@gmail.com">oramos</author>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>control_toolbox</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>control_toolbox</exec_depend>

  <!-- Export Gazebo plugin path -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
